# zero-to-production-practise

./: Cargo.toml  Dockerfile  README.md
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240909055101_seed_user.sql  20240913132621_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helper.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
