[package]
name = "zero-test"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero-test"

[dependencies]
actix-web = "4"
base64 = "0.22.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "4.5.0"
serde_json = "1.0.128"
config = "0.14.0"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
unicode-segmentation = "1.11.0"
chrono = "0.4.38"
tracing = { version = "0.1.40", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
rand = { version = "0.8.5", features=["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.11"
validator = "0.18.1"
thiserror = "1.0.63"
anyhow = "1.0.86"
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
futures-util = "0.3.30"
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }

[dependencies.actix-session]
version = "0.10.0"
features = ["redis-session"]

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = [
    "runtime-tokio", 
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12.5"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
serde_urlencoded = "0.7.1"
once_cell = "1.19.0"
claims = "0.7.1"
fake = "2.9.2"
proptest = "1.5.0"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6.1"
serde_json = "1.0.128"
linkify = "0.10.0"

